[project]
name = "tkinter_shapes"
description = "Simple tkinter wrappers intended to facilitate manipulation of shapes and polygons rendered on a canvas."
authors = [
  {name='a.whit', email='nml@whit.contact'},
]
readme="README.md"
license = { file="LICENSE.txt" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/ricmua/tkinter_shapes"



