[metadata]
name = tkinter_shapes
version = attr: tkinter_shapes.__version__
description = Simple tkinter wrappers intended to facilitate manipulation of shapes and polygons rendered on a canvas.
long_description = file: README.md, LICENSE
keywords = 
license = Mozilla Public License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    
[options]
packages = tkinter_shapes
install_requires =
    requests
    importlib-metadata; python_version < "3.8"


